<resources>
    <string name="app_name">Planirovhik</string>
    <string name="DG">ВЫХОД</string>
    <string name="DV">ПАРОЛЬ</string>
    <string name="FG">ПЛАНИРОВЩИК</string>
    <string name="todo">TODO</string>
    <string name="DFH">ЗАКОНЧИТЬ ОТЧЕТ</string>
    <string name="string_dfh" />
    <string name="string_string_dfh" />
    <string name="string_string_string_dfh">ЗАКОНЧИТЬ ОТЧЕТ</string>
    <string name="GF">СХОДИТЬ В МАГАЗИН</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="todo5">TODO</string>
    <string name="EDH">УБИРАТЬСЯ В ДОМЕ</string>
    <string name="REJ">СЕГОДНЯ</string>
    <string name="todo7">TODO</string>
    <string name="todo8">TODO</string>
    <string name="todo9">TODO</string>
    <string name="todo10">TODO</string>
    <string name="todo11">TODO</string>
    <string name="todo12">TODO</string>
    <string name="todo13">TODO</string>
    <string name="todo14">TODO</string>
    <string name="todo15">TODO</string>
    <string name="todo16">TODO</string>
    <string name="todo17">TODO</string>
    <string name="DVG">АВТОРИЗАЦИЯ</string>
    <string name="FD">ИМЯ ПОЛЬЗОВАТЕЛЯ</string>
    <string name="BJ">ВХОД</string>
    <string name="string_bj">ВХОД</string>
    <string name="todo18">TODO</string>
    <string name="todo19">TODO</string>
</resources>